@@ -78,6 +78,7 @@ class CAction extends CZBXAPI{
 			'searchByAny'			=> null,
 			'startSearch'			=> null,
 			'excludeSearch'			=> null,
+			'searchWildcardsEnabled'=> null,
 
 // OutPut
 			'output'				=> API_OUTPUT_REFER,
