@@ -68,6 +68,7 @@ class CDRule extends CZBXAPI{
 			'searchByAny'			=> null,
 			'startSearch'				=> null,
 			'excludeSearch'				=> null,
+			'searchWildcardsEnabled'	=> null,
 
 // output
 			'output'				=> API_OUTPUT_REFER,
