@@ -97,6 +97,7 @@ class CItem extends CItemGeneral{
 			'searchByAny'			=> null,
 			'startSearch'				=> null,
 			'excludeSearch'			=> null,
+			'searchWildcardsEnabled'	=> null,
 
 // OutPut
 			'output'				=> API_OUTPUT_REFER,
