@@ -72,6 +72,8 @@ class CMediatype extends CZBXAPI{
 			'searchByAny'			=> null,
 			'startSearch'				=> null,
 			'excludeSearch'				=> null,
+			'searchWildcardsEnabled'	=> null,
+
 // OutPut
 			'output'					=> API_OUTPUT_REFER,
 			'selectUsers'				=> null,
