@@ -77,6 +77,7 @@ class CScript extends CZBXAPI{
 			'searchByAny'			=> null,
 			'startSearch'				=> null,
 			'excludeSearch'			=> null,
+			'searchWildcardsEnabled'=> null,
 
 // OutPut
 			'output'				=> API_OUTPUT_REFER,
